--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
         "php": ">=7.4",
         "luguohuakai/func": "~1.0.17"
     },
-    "license": "apache",
+    "license": "MIT",
     "autoload": {
         "psr-4": {
             "Luguohuakai\\Fanyi\\": ""
