--- a/fanyi.ini
+++ b/fanyi.ini
@@ -1,4 +1,4 @@
-app_id = 20230906001807437
-app_secret = kpiKJNQM9D_28RLDoNfH
+app_id =
+app_secret =
 ;1:首字母大写(默认) 2:所有单词首字母大写 3:保持原样
 word_type = 1
