新增 支持高级功能, 特殊情况特殊处理, 支持正则匹配基准文件

--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
     "type": "library",
     "require": {
         "php": ">=7.4",
-        "luguohuakai/func": "~1.0.17"
+        "luguohuakai/func": "~1.0.17",
+        "ext-json": "*"
     },
     "license": "MIT",
     "autoload": {
