优化 正则匹配支持多个 修复 数字键不写入问题

--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
     "require": {
         "php": ">=7.4",
         "luguohuakai/func": "~1.0.17",
-        "ext-json": "*"
+        "ext-json": "*",
+        "ext-curl": "*"
     },
     "license": "MIT",
     "autoload": {
